--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" value="width=device-width, initial-scale=1">
     <title>Rock-Paper-Scissors</title>
 </head>
-
 <body>
+
+<div class="container">
+</div>
     <script src="script.js"></script>
 </body>
 
